test/bad/classes/name03.px

class Class def
    x: Int

class Class def
    y: Int
